# golioth-wpa2

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  wifi_enterprise_main.c
